// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OrganizationOwners /> should hide the menu gear for the active user 1`] = `
Array [
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding-bottom: 16px;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-1,
.emotion-1:hover,
.emotion-1:visited,
.emotion-1 .noop {
  background-color: #3A5DFF;
}

.emotion-1:hover,
.emotion-1 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-1[aria-disabled=true],
.emotion-1 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<div
    className="emotion-0"
  >
    <a
      className="emotion-1"
      href="/organizations/42869703-fb62-4988-a0d1-e59b15caff06/owners/add"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Add Organization Owner(s)
    </a>
  </div>,
  .emotion-0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-3 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.emotion-6 {
  height: auto;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  white-space: nowrap;
}

.emotion-6 tr {
  background-color: #252525;
}

.emotion-6 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-6 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-6 tr:hover .actions {
  color: #b3b3b3;
}

.emotion-6 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-6 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-6 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-6 td {
  max-width: calc(100vw / 3);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-6 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-6 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-7 {
  text-align: left;
  white-space: pre-line;
  vertical-align: bottom;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 0;
  border-bottom: 1px solid #2e2e2e;
  width: auto;
}

.emotion-7:nth-of-type(0) {
  width: 100%;
}

.emotion-7:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-8 {
  padding: 12px 16px;
}

.emotion-13 {
  text-align: left;
  white-space: pre-line;
  vertical-align: bottom;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 0;
  border-bottom: 1px solid #2e2e2e;
  width: 1px;
}

.emotion-13:nth-of-type(0) {
  width: 100%;
}

.emotion-13:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 12px 16px;
}

.emotion-15 {
  position: relative;
  height: 100%;
}

.emotion-16 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 6px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: transparent;
  margin: -6px;
}

.emotion-16:hover,
.emotion-16.focus-visible:focus {
  color: #ffffff!important;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <div
        className="emotion-2"
      >
        <h3
          className="emotion-3"
        >
          Owners
          : 
          5
        </h3>
      </div>
      <div
        className="emotion-4"
      >
        <div
          className="emotion-5"
        >
          <table
            className="emotion-6"
          >
            <thead>
              <tr>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    Owner Email
                  </div>
                </th>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    First Name
                  </div>
                </th>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    Last Name
                  </div>
                </th>
                <th
                  className="emotion-13"
                >
                  <div
                    className="emotion-14"
                  >
                    <svg
                      data-file-name="kebab.svg"
                      height={20}
                    />
                  </div>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  danny@zorroa.com
                </td>
                <td>
                  Danny
                </td>
                <td>
                  Tiesling
                </td>
                <td>
                  <div
                    className="emotion-15"
                  >
                    <button
                      aria-label="Toggle Actions Menu"
                      className="actions emotion-16"
                      onBlur={[Function]}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="kebab.svg"
                        height={20}
                      />
                    </button>
                  </div>
                </td>
              </tr>
              <tr>
                <td>
                  software@zorroa.com
                </td>
                <td>
                  Admin
                </td>
                <td>
                  Adminson
                </td>
                <td />
              </tr>
              <tr>
                <td>
                  damien@zorroa.com
                </td>
                <td>
                  Damien
                </td>
                <td>
                  Varron
                </td>
                <td>
                  <div
                    className="emotion-15"
                  >
                    <button
                      aria-label="Toggle Actions Menu"
                      className="actions emotion-16"
                      onBlur={[Function]}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="kebab.svg"
                        height={20}
                      />
                    </button>
                  </div>
                </td>
              </tr>
              <tr>
                <td>
                  zach@zorroa.com
                </td>
                <td>
                  Zach
                </td>
                <td>
                  Schipono
                </td>
                <td>
                  <div
                    className="emotion-15"
                  >
                    <button
                      aria-label="Toggle Actions Menu"
                      className="actions emotion-16"
                      onBlur={[Function]}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="kebab.svg"
                        height={20}
                      />
                    </button>
                  </div>
                </td>
              </tr>
              <tr>
                <td>
                  tiesling@gmail.com
                </td>
                <td>
                  Danny
                </td>
                <td>
                  Tiesling
                </td>
                <td>
                  <div
                    className="emotion-15"
                  >
                    <button
                      aria-label="Toggle Actions Menu"
                      className="actions emotion-16"
                      onBlur={[Function]}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="kebab.svg"
                        height={20}
                      />
                    </button>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div>
           
        </div>
        <Pagination
          currentPage={1}
          totalPages={1}
        />
        <div>
           
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`<OrganizationOwners /> should render properly with no owners 1`] = `
Array [
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding-bottom: 16px;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-1,
.emotion-1:hover,
.emotion-1:visited,
.emotion-1 .noop {
  background-color: #3A5DFF;
}

.emotion-1:hover,
.emotion-1 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-1[aria-disabled=true],
.emotion-1 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<div
    className="emotion-0"
  >
    <a
      className="emotion-1"
      href="/organizations/42869703-fb62-4988-a0d1-e59b15caff06/owners/add"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Add Organization Owner(s)
    </a>
  </div>,
  .emotion-0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-3 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.emotion-5 {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.emotion-6 {
  height: 100%;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  white-space: nowrap;
}

.emotion-6 tr {
  background-color: #252525;
}

.emotion-6 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-6 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-6 tr:hover .actions {
  color: #b3b3b3;
}

.emotion-6 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-6 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-6 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-6 td {
  max-width: calc(100vw / 3);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-6 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-6 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-7 {
  text-align: left;
  white-space: pre-line;
  vertical-align: bottom;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 0;
  border-bottom: 1px solid #2e2e2e;
  width: auto;
}

.emotion-7:nth-of-type(0) {
  width: 100%;
}

.emotion-7:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-8 {
  padding: 12px 16px;
}

.emotion-13 {
  text-align: left;
  white-space: pre-line;
  vertical-align: bottom;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 0;
  border-bottom: 1px solid #2e2e2e;
  width: 1px;
}

.emotion-13:nth-of-type(0) {
  width: 100%;
}

.emotion-13:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 12px 16px;
}

.emotion-15 {
  height: 100%;
  pointer-events: none;
}

.emotion-16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  color: #808080;
  font-size: 15px;
  line-height: 19px;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <div
        className="emotion-2"
      >
        <h3
          className="emotion-3"
        >
          Owners
          : 
          0
        </h3>
      </div>
      <div
        className="emotion-4"
      >
        <div
          className="emotion-5"
        >
          <table
            className="emotion-6"
          >
            <thead>
              <tr>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    Owner Email
                  </div>
                </th>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    First Name
                  </div>
                </th>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    Last Name
                  </div>
                </th>
                <th
                  className="emotion-13"
                >
                  <div
                    className="emotion-14"
                  >
                    <svg
                      data-file-name="kebab.svg"
                      height={20}
                    />
                  </div>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                className="emotion-15"
              >
                <td
                  colSpan={4}
                >
                  <div
                    className="emotion-16"
                  >
                    <span />
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`<OrganizationOwners /> should render properly with owners 1`] = `
Array [
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  padding-bottom: 16px;
}

.emotion-1 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 8px 16px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
}

.emotion-1,
.emotion-1:hover,
.emotion-1:visited,
.emotion-1 .noop {
  background-color: #3A5DFF;
}

.emotion-1:hover,
.emotion-1 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6088FE;
}

.emotion-1[aria-disabled=true],
.emotion-1 .noop {
  color: #2e2e2e;
  background-color: #808080;
}

<div
    className="emotion-0"
  >
    <a
      className="emotion-1"
      href="/organizations/42869703-fb62-4988-a0d1-e59b15caff06/owners/add"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      Add Organization Owner(s)
    </a>
  </div>,
  .emotion-0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  padding-bottom: 16px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-3 {
  color: #b3b3b3;
  font-size: 15px;
  line-height: 19px;
  font-weight: 400;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
}

.emotion-6 {
  height: auto;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  white-space: nowrap;
}

.emotion-6 tr {
  background-color: #252525;
}

.emotion-6 tr:nth-of-type(2n) {
  background-color: #2e2e2e;
}

.emotion-6 tr:hover {
  background-color: #4a4a4a;
  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
}

.emotion-6 tr:hover .actions {
  color: #b3b3b3;
}

.emotion-6 tr:hover td {
  border: 1px solid #808080;
  border-left: 0;
  border-right: 0;
}

.emotion-6 tr:hover td:first-of-type {
  border-left: 1px solid #808080;
}

.emotion-6 tr:hover td:last-of-type {
  border-right: 1px solid #808080;
}

.emotion-6 td {
  max-width: calc(100vw / 3);
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #e0e0e0;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0;
  border-right: 0;
}

.emotion-6 td:first-of-type {
  border-left: 1px solid transparent;
}

.emotion-6 td:last-of-type {
  border-right: 1px solid transparent;
  overflow: visible;
}

.emotion-7 {
  text-align: left;
  white-space: pre-line;
  vertical-align: bottom;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 0;
  border-bottom: 1px solid #2e2e2e;
  width: auto;
}

.emotion-7:nth-of-type(0) {
  width: 100%;
}

.emotion-7:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-8 {
  padding: 12px 16px;
}

.emotion-13 {
  text-align: left;
  white-space: pre-line;
  vertical-align: bottom;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  color: #e0e0e0;
  background-color: #4a4a4a;
  padding: 0;
  border-bottom: 1px solid #2e2e2e;
  width: 1px;
}

.emotion-13:nth-of-type(0) {
  width: 100%;
}

.emotion-13:not(:last-child) {
  border-right: 1px solid #2e2e2e;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 12px 16px;
}

.emotion-15 {
  position: relative;
  height: 100%;
}

.emotion-16 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 6px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: transparent;
  margin: -6px;
}

.emotion-16:hover,
.emotion-16.focus-visible:focus {
  color: #ffffff!important;
}

<div
    className="emotion-0"
  >
    <div
      className="emotion-1"
    >
      <div
        className="emotion-2"
      >
        <h3
          className="emotion-3"
        >
          Owners
          : 
          5
        </h3>
      </div>
      <div
        className="emotion-4"
      >
        <div
          className="emotion-5"
        >
          <table
            className="emotion-6"
          >
            <thead>
              <tr>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    Owner Email
                  </div>
                </th>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    First Name
                  </div>
                </th>
                <th
                  className="emotion-7"
                >
                  <div
                    className="emotion-8"
                  >
                    Last Name
                  </div>
                </th>
                <th
                  className="emotion-13"
                >
                  <div
                    className="emotion-14"
                  >
                    <svg
                      data-file-name="kebab.svg"
                      height={20}
                    />
                  </div>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td>
                  danny@zorroa.com
                </td>
                <td>
                  Danny
                </td>
                <td>
                  Tiesling
                </td>
                <td>
                  <div
                    className="emotion-15"
                  >
                    <button
                      aria-label="Toggle Actions Menu"
                      className="actions emotion-16"
                      onBlur={[Function]}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="kebab.svg"
                        height={20}
                      />
                    </button>
                  </div>
                </td>
              </tr>
              <tr>
                <td>
                  software@zorroa.com
                </td>
                <td>
                  Admin
                </td>
                <td>
                  Adminson
                </td>
                <td>
                  <div
                    className="emotion-15"
                  >
                    <button
                      aria-label="Toggle Actions Menu"
                      className="actions emotion-16"
                      onBlur={[Function]}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="kebab.svg"
                        height={20}
                      />
                    </button>
                  </div>
                </td>
              </tr>
              <tr>
                <td>
                  damien@zorroa.com
                </td>
                <td>
                  Damien
                </td>
                <td>
                  Varron
                </td>
                <td>
                  <div
                    className="emotion-15"
                  >
                    <button
                      aria-label="Toggle Actions Menu"
                      className="actions emotion-16"
                      onBlur={[Function]}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="kebab.svg"
                        height={20}
                      />
                    </button>
                  </div>
                </td>
              </tr>
              <tr>
                <td>
                  zach@zorroa.com
                </td>
                <td>
                  Zach
                </td>
                <td>
                  Schipono
                </td>
                <td>
                  <div
                    className="emotion-15"
                  >
                    <button
                      aria-label="Toggle Actions Menu"
                      className="actions emotion-16"
                      onBlur={[Function]}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="kebab.svg"
                        height={20}
                      />
                    </button>
                  </div>
                </td>
              </tr>
              <tr>
                <td>
                  tiesling@gmail.com
                </td>
                <td>
                  Danny
                </td>
                <td>
                  Tiesling
                </td>
                <td>
                  <div
                    className="emotion-15"
                  >
                    <button
                      aria-label="Toggle Actions Menu"
                      className="actions emotion-16"
                      onBlur={[Function]}
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="kebab.svg"
                        height={20}
                      />
                    </button>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
        <div>
           
        </div>
        <Pagination
          currentPage={1}
          totalPages={1}
        />
        <div>
           
        </div>
      </div>
    </div>
  </div>,
]
`;
